--- a/src/build.properties
+++ b/src/build.properties
@@ -2,4 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               icons/,\
+               ofAndroidUnpackAndSetup.xml,\
+               ofAndroidclipseProjectGenerator.xml
