--- a/src/build.properties
+++ b/src/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                ofAndroidUnpackAndSetup.xml,\
-               ofAndroidclipseProjectGenerator.xml
+               ofAndroidclipseProjectGenerator.xml,\
+               plugin.properties
